[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/WaterfallSpawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Icebergs/iceberg-5.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Icebergs/iceberg-2b.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Icebergs/iceberg-4.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Icebergs/iceberg-2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Icebergs/iceberg-1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Icebergs/iceberg-6.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Icebergs/iceberg-3.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=3]
radius = 345.429

[node name="WaterfallSpawner" type="Area2D"]
position = Vector2( 4036.56, -181.538 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
icebergs = [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ) ]

[node name="WaterfallShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.8
autostart = true

[node name="SpawnedIcebergs" type="Node2D" parent="."]

[connection signal="body_exited" from="." to="." method="_on_WaterfallSpawner_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
